--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         android:targetSdkVersion="21" />
 
     <application android:allowBackup="true"
+        android:name=".SynchronizedNotificationApplication"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
